--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <form class="js-search search">
-      <input class="input-search" name="search" type="text" />
+      <input class="input-search" name="search" type="text" placeholder="Search images..." />
       <button class="btn-search" type="submit">Search</button>
     </form>
     <div class="container">
@@ -28,6 +28,6 @@
       <ul class="gallery"></ul>
     </div>
 
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
